# pyptax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  Makefile  README.md  pyproject.toml  setup.py  tox.ini
docs/: api.rst  cli.rst  conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst
pyptax/: __init__.py  cli.py  models.py  ptax.py  resources.py  settings.py
tests/: conftest.py  test_cli.py  test_client.py  test_helpers.py  test_models.py  test_ptax.py  test_resources.py
