[tool.poetry]
name = "pyptax"
version = "0.6.0"
description = "A Python library to retrieve information on Ptax rates"
authors = ["Bruno Cardoso <cardosobrunob@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/brunobcardoso/pyptax"
repository = "https://github.com/brunobcardoso/pyptax"
documentation = "https://pyptax.readthedocs.io"
keywords = ["ptax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
include = [
    "LICENSE",
    "CHANGES.rst"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pre-commit = "^2.5.1"
responses = "^0.10.15"

[tool.poetry.plugins.console_scripts]
pyptax = "pyptax.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
