[tool.poetry]
name = "pyptax"
version = "0.5.0"
description = "A Python library to retrieve information on Ptax rates"
license = "MIT"
authors = ["brunobcardoso <cardosobrunob@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/brunobcardoso/pyptax"
repository = "https://github.com/brunobcardoso/pyptax"
documentation = "https://pyptax.readthedocs.io"
keywords = ["ptax"]
classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Office/Business :: Financial",
]
include = [
    "LICENSE",
    "CHANGES.rst"
]


[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
responses = "^0.12.0"
Sphinx = "^3.2.1"
tox = "^3.20.1"
sphinx-rtd-theme = "^0.5.0"
pre-commit = "^2.7.1"

[tool.poetry.plugins.console_scripts]
pyptax = "pyptax.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
known_first_party = "pyptax"
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
default_section = "THIRDPARTY"
